Panels 6.x-3.8 (2010-Oct-29)
==============
hook_panels_pre_render() and hook_panels_post_render() getting empty displays.
#865704: Editing mini panels styles failed badly due to missing piece of cache.
Custom style could crash if trying to enable style reuse without first enabling stylizer.module.
In Flexible, the "class" would not stick when adding a new region/row/column but would when editing.
#861426: Editing a mini panel while that same mini panel is displayed on the page resulted in a crash.
#871730: Panel nodes with IPE enabled let anyone use IPE.
#877810: Multiple "Add flexible layout" tabs appearing based on number of flexible layouts stored.
#873224 by thsutton: hook_requirements() could cause notice error.
#867340 by cedarm: Restore removed but deprecated panels_render_layout() function.
#871942 by dwatson: Invalid CSS made dragger image not appear during IPE.
#867864: Fix a admin title and edit link problems with custom content types.
#570194: Add support for the "checkall" module in the content permissions page.
#696846: Mini panels conflated displayed title with admin title.
#889824: Custom class could would cause stylizer class to become malformed.
Add a simple "Panels" row style to Views that lets you put fields in a panel layout.
Add two new Page Wizards to more easily create some of the most commonly used Panel pages.
#869766 by rupl: flexible layout builder could fail with multiple columns in only one row. (Needs clear cache to see changes in generated CSS.)
#897214: Mini panel uninstall tried to order mini panels by a non-existing field.
#893456 by omerida: Change FAPI definition of panel node "body" field to be more consistent with other node body fields.
#812658 by naxoc: Caching should take language into account.
#890086: Possible crash in flexible layout by not having CTools export.inc loaded.
#899456 by yareckon: IPE customize button needs to be reset to "static" instead of "normal".