@@ -1,3 +1,10 @@
+Panels 3.x-3.9 (2011-Jan-12)
+==============
+#959206: Legacy mode rendering fails with flexible due to CSS file not getting added.
+#964334: Panels breaks views' row styles with the panels fields style.
+#961662 by Nick Lewis: Account for pager info in simple caching.
+Scrub css id and css class on panes.
+
 Panels 6.x-3.8 (2010-Oct-29)
 ==============
 hook_panels_pre_render() and hook_panels_post_render() getting empty displays.
